# IAnGogh

./: .gitignore  README.txt  pendientes_uipath.txt  significado_del_nombre.txt
IAnGogh/: .env.example  README.md  pyproject.toml
IAnGogh/contracts/: pending_applications.json
IAnGogh/docs/: architecture.md
IAnGogh/scripts/: quick_checks.txt  run_api.ps1
IAnGogh/src/app_core/: services.py
IAnGogh/src/app_desktop/templates/: index.html  login.html
IAnGogh/src/app_infrastructure/: config.py  fs_utils.py
IAnGogh/src/app_integration_localapi/: main.py
JobHunterMaster/: README.md  pyproject.toml
JobHunterMaster/contracts/: active_profile.json  application_result.json  extracted_jobs.json  manual_review_alert.json
JobHunterMaster/docs/: roadmap.md
JobHunterMaster/scripts/: generate_key.py
JobHunterMaster/src/: main.py
JobHunterMaster/src/app_core/: services.py
JobHunterMaster/src/app_domain/: models.py
JobHunterMaster/src/app_infrastructure/: config.py  mongo.py  security.py
JobHunterMaster/src/app_integration_localapi/: main.py
JobHunterMaster/src/jobhuntermaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
